--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -16,13 +16,13 @@
     margin-left: 200px;
   }
   &__text {
-    font-family: "IBM Plex Sans", sans-serif;
+    font-family: $fontIBM;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
-    color: #000;
-    border: 1px solid #1a5a4c;
+    color: $colorBlack;
+    border: 1px solid $colorGreen;
     padding: 16px 80px;
     border-right: none;
 
@@ -38,7 +38,7 @@
   &__field {
     width: 50px;
     height: 50px;
-    background-color: #1a5a4c;
+    background-color: $colorGreen;
     transition: background-color 0.3s;
 
     &:hover {
