--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -46,7 +46,7 @@
   }
   &__type {
 
-    font-family: "IBM Plex Sans", sans-serif;
+    font-family: $fontIBM;
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
@@ -58,22 +58,22 @@
     }
   }
   &__date {
-    font-family: "IBM Plex Sans", sans-serif;
+    font-family: $fontIBM;
     font-weight: 700;
     font-size: 16px;
     line-height: 150%;
-    color: #1a5a4c;
+    color: $colorGreen;
 
     @include onTablet {
       font-size: 14px;
     }
   }
   &__name {
-    font-family: "Montserrat", sans-serif;
+    font-family: $fontMontserrat;
     font-weight: 400;
     font-size: 28px;
     line-height: 100%;
-    color: #0f0e08;
+    color: $colorBlack;
     &--container {
       position: relative;
     }
@@ -104,10 +104,10 @@
     }
   }
   &__text {
-    font-family: "IBM Plex Sans", sans-serif;
+    font-family: $fontIBM;
     font-weight: 300;
     font-size: 16px;
     line-height: 150%;
-    color: #4e4e4e;
+    color: $colorGrey;
   }
 }
