--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  font-family: "IBM Plex Sans", sans-serif;
+  font-family: $fontIBM;
   font-weight: 400;
   font-size: 14px;
   line-height: 100%;
@@ -81,22 +81,24 @@
     font-size: 14px;
     line-height: 150%;
     text-decoration: none;
-    color: #0f0e08;
+    color: $colorBlack;
     border-bottom: 1px solid transparent;
     transition: border-color 0.3s;
 
     &:hover {
-      border-color: #0f0e08;
+      border-color: $colorBlack;
     }
   }
 
   &__text {
+    display: flex;
+    flex-direction: column;
     font-size: 14px;
     line-height: 150%;
     margin-bottom: 20px;
-    width: 130px;
+    text-align: start;
     text-decoration: none;
-    color: #0f0e08;
+    color: $colorBlack;
 
     @include onTablet {
       min-width: 210px;
@@ -112,12 +114,12 @@
     transition: border-color 0.3s;
 
     &:hover {
-      border-color: #0f0e08;
+      border-color: $colorBlack;
     }
   }
 
   &__text-second {
-    width: 130px;
+    width: 150px;
     font-size: 14px;
     line-height: 150%;
     margin-bottom: 0;
@@ -147,19 +149,20 @@
   }
 
   &__block--line {
-    width: 280px;
+    min-width: 280px;
     height: 1px;
     border-bottom: 1px;
     background-color: rgba(26, 90, 76, 0.5);
     margin-bottom: 40px;
 
     @include onTablet {
-      width: 450px;
+      min-width: 450px;
       margin-bottom: 64px;
     }
 
     @include onDesktop {
-      width: 1px;
+      min-width: 1px;
+      max-width: 1px;
       height: 260px;
       margin: 0 auto;
     }
