--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -81,12 +81,12 @@
   }
 
   &__title {
-    font-family: "Montserrat", sans-serif;
+    font-family: $fontMontserrat;
     font-style: normal;
     font-weight: 700;
     font-size: 45px;
     line-height: 100%;
-    color: #000;
+    color: $colorBlack;
     text-align: center;
     @include onTablet {
       text-align: start;
@@ -105,7 +105,7 @@
     margin-right: 250px;
     margin-bottom: 150px;
     transform: rotate(-90deg);
-    font-family: "IBM Plex Sans", sans-serif;
+    font-family: $fontIBM;
     font-weight: 700;
     font-size: 14px;
     line-height: 100%;
@@ -117,7 +117,7 @@
       position: absolute;
       width: 1px;
       height: 70px;
-      background-color: #1a5a4c;
+      background-color: $colorGreen;
       transform: rotate(-90deg);
       top: -26px;
       right: 96px;
