--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -34,7 +34,7 @@
   &__link {
     display: inline-block;
     text-decoration: none;
-    font-family: "Montserrat", sans-serif;
+    font-family: $fontMontserrat;
     font-weight: 700;
     font-size: 28px;
     line-height: 100%;
