--- a/src/styles/blocks/namu.scss
+++ b/src/styles/blocks/namu.scss
@@ -5,16 +5,16 @@
   align-items: center;
   &__designer {
     text-decoration: none;
-    font-family: "IBM Plex Sans", sans-serif;
+    font-family: $fontIBM;
     font-weight: 300;
     font-size: 12px;
     line-height: 140.62%;
-    color: #0f0e08;
+    color: $colorBlack;
     border-bottom: 1px solid transparent;
     transition: border-color 0.3s;
 
     &:hover {
-      border-color: #0f0e08;
+      border-color: $colorBlack;
     }
   }
   @include onTablet {
