--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -18,7 +18,7 @@
   }
   &__title {
     margin: 0;
-    font-family: "Montserrat", sans-serif;
+    font-family: $fontMontserrat;
     font-style: normal;
     font-weight: 700;
     font-size: 36px;
@@ -33,7 +33,7 @@
   }
   &__subtitle {
     margin: 0;
-    font-family: "IBM Plex Sans", sans-serif;
+    font-family: $fontIBM;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -54,16 +54,23 @@
     gap: 0;
     justify-content: center;
   }
+
   &__text {
     width: 230px;
     height: 50px;
     border-width: 0;
+    padding-left: 24px;
+    @include onTablet {
+      width: 374px;
+    }
+    @include onDesktop {
+      width: 470px;
+    }
     &::placeholder {
-      font-family: "Montserrat", sans-serif;
+      font-family: $fontMontserrat;
       font-weight: 400;
       font-size: 14px;
       line-height: 100%;
-      padding-left: 24px;
     }
   }
   &__button {
@@ -74,7 +81,7 @@
     background-position: center;
     background-color: #f14a27;
     transition: background-color 0.3s;
-    
+
     &:hover {
       background-color: #f1836d;
       cursor: pointer;
