--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,6 @@
-$c-gray: #eee;
+$colorBlack: #0f0e08;
+$colorGrey: #4e4e4e;
+$colorWhite: #fff;
+$colorGreen: #1a5a4c;
+$fontIBM: "IBM Plex Sans", sans-serif;
+$fontMontserrat: "Montserrat", sans-serif;
