--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -1,13 +1,11 @@
 .container {
   margin: 0 auto;
-  max-width: 280px;
+  /* max-width: 280px; */
   padding: 0 20px;
   @include onTablet {
-    max-width: 700px;
     padding: 0 34px;
   }
   @include onDesktop {
-    max-width: 1170px;
     padding: 0 55px;
   }
 }
