--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -3,18 +3,17 @@
     margin: 0;
     margin-bottom: 40px;
     text-align: center;
-    font-family: "Montserrat", sans-serif;
+    font-family: $fontMontserrat;
     font-style: normal;
     font-weight: 700;
     font-size: 36px;
     line-height: 100%;
     padding: 0 20px;
-    color: #0f0e08;
+    color: $colorBlack;
 
     @include onTablet {
       margin-bottom: 48px;
       padding: 0;
-      text-align: start;
       font-size: 48px;
     }
     @include onDesktop {
