--- a/src/styles/blocks/special-event.scss
+++ b/src/styles/blocks/special-event.scss
@@ -1,9 +1,6 @@
 .special-event {
-
   &__picture {
-    margin-left: -20px;
-    width: 320px;
-    height: 210px;
+    width: 100%;
     cursor: zoom-in;
     transition: transform 0.3s,
       box-shadow 0.3s,
@@ -17,22 +14,19 @@
 
     @include onTablet {
       margin-left: 0;
-      width: 700px;
-      height: 390px;
-    }
-
-    @include onDesktop {
-      width: 100%;
-      height: 550px;
     }
   }
   &__deskription {
-    position: relative;
-    width: 280px;
-    height: 140px;
+    display: block;
+    width: 90%;
+    margin: 0 auto;
+    transform: translateY(-40%);
     @include onTablet {
-      width: 570px;
-      height: 204px;
+      width: 85%;
+    }
+
+    @include onDesktop {
+      width: 53%;
     }
   }
   &__wrapper {
@@ -44,26 +38,15 @@
   }
   &__text-container {
     padding-top: 20px;
-    margin: 0;
-    position: absolute;
-    bottom: 90px;
-    width: 280px;
-    height: 140px;
-    background-color: #fff;
+    padding-bottom: 20px;
+    background-color: $colorWhite;
     box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
     @include onTablet {
-      width: 570px;
-      height: 204px;
-      bottom: 90px;
-      left: 65px;
-    }
-    @include onDesktop {
-      bottom: 90px;
-      left: 285px;
+      padding-bottom: 50px;
     }
   }
   &__type {
-    font-family: "IBM Plex Sans", sans-serif;
+    font-family: $fontIBM;
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
@@ -79,30 +62,34 @@
   }
   &__date {
     padding-right: 20px;
-    font-family: "IBM Plex Sans", sans-serif;
+    font-family: $fontIBM;
     font-weight: 700;
     font-size: 16px;
     line-height: 150%;
-    color: #1a5a4c;
+    color: $colorGreen;
     @include onTablet {
       font-size: 14px;
       padding-right: 80px;
     }
   }
   &__name {
-    font-family: "Montserrat", sans-serif;
+    font-family: $fontMontserrat;
     font-weight: 400;
     font-size: 28px;
     line-height: 100%;
     text-align: center;
-    color: #0f0e08;
+    color: $colorBlack;
+    padding-left: 5px;
+    padding-right: 5px;
     @include onTablet {
       font-size: 36px;
-      text-align: start;
+      text-align: center;
       padding-left: 55px;
+      padding-right: 55px;
     }
     @include onDesktop {
       padding-left: 100px;
+      padding-right: 100px;
     }
   }
 }
