--- a/src/styles/blocks/swiper.scss
+++ b/src/styles/blocks/swiper.scss
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100%;
   &__picture {
-    min-width: 280px;
+    width: 100%;
   }
   @include onTablet {
     padding: 20px;
