--- a/src/styles/blocks/content.scss
+++ b/src/styles/blocks/content.scss
@@ -10,497 +10,43 @@
     }
 
     @include onDesktop {
+      width: 100%;
       display: block;
-      width: 90%;
-      margin: 0 55px 200px;
+      padding-left: 55px;
+      margin-bottom: 200px;
+    }
+
+    &-text {
+      font-family: "Montserrat", sans-serif;
+      font-size: 36px;
+      line-height: 36px;
+      font-weight: 700;
+      color: $colorBlack;
+      text-align: center;
+
+      margin-bottom: 48px;
     }
 
     &-first {
+      max-width: 1280px;
       display: flex;
       gap: 50px;
-      margin-bottom: 30px;
+      margin: 0 auto 30px;
     }
 
     &-second {
+      max-width: 1280px;
       display: flex;
       gap: 50px;
+      margin: 0 auto;
     }
 
     &-foto {
       transition: transform 0.8s;
 
       &:hover {
-        transform: scale(1.2);
+        transform: scale(1.1);
       }
     }
-  }
-  &__events {
-
-    &--title {
-      font-family: "Montserrat", sans-serif;
-      font-size: 36px;
-      line-height: 36px;
-      font-weight: 700;
-      text-align: center;
-      color: $colorBlack;
-
-      margin: 0 20px 40px;
-
-      @include onTablet {
-        font-size: 48px;
-        line-height: 48px;
-
-        text-align: left;
-        margin: 0 34px 48px;
-      }
-
-      @include onDesktop {
-        margin: 0 55px 56px;
-      }
-    }
-
-    &--goAndComeBack {
-      @include onDesktop {
-        display: flex;
-        position: relative;
-      }
-
-      &-photo {
-        width: 90%;
-        height: 210px;
-
-        margin: 0 20px 16px;
-
-        @include onTablet {
-          height: 520px;
-          margin: 0 34px 40px;
-        }
-
-        @include onDesktop {
-          width: 60%;
-
-          margin: 0 40px 104px;
-        }
-      }
-
-      &-links {
-        display: flex;
-        justify-content: space-between;
-
-        margin: 0 20px 10px;
-
-        @include onTablet {
-          margin-top: 0;
-          margin-left: 34px;
-          margin-right: 0;
-          margin-bottom: 30px;
-
-          justify-content: start;
-        }
-
-        @include onDesktop {
-          position: absolute;
-          left: 62%;
-          top: 25%;
-        }
-      }
-
-      &-title {
-        font-family: "Montserrat", sans-serif;
-        font-size: 28px;
-        line-height: 28px;
-        font-weight: 400;
-        color: $colorBlack;
-
-        margin: 0 20px 10px;
-
-        @include onTablet {
-          font-size: 36px;
-          line-height: 36px;
-
-          margin: 0 34px 15px;
-        }
-
-        @include onDesktop {
-          position: absolute;
-          left: 62%;
-          top: 38%;
-        }
-      }
-
-      &-text {
-        font-family: "IBM Plex Sans", sans-serif;
-        font-size: 16px;
-        line-height: 24px;
-        font-weight: 300;
-        color: $colorGrey;
-
-        margin: 0 20px 60px;
-
-        @include onTablet {
-          width: 460px;
-          margin: 0 34px 64px;
-        }
-
-        @include onDesktop {
-          width: 370px;
-          position: absolute;
-          left: 62%;
-          top: 50%;
-        }
-      }
-    }
-
-    &--memoriesAndDreams {
-      position: relative;
-
-      &-photo {
-        width: 90%;
-        height: 210px;
-
-        margin: 0 20px 20px;
-
-        @include onTablet {
-          width: 90%;
-          height: 520px;
-
-          margin: 0 35px 40px;
-        }
-
-        @include onDesktop {
-          width: 60%;
-
-          margin: 0 40px 104px;
-        }
-      }
-
-      &-links {
-        display: flex;
-        justify-content: space-between;
-
-        margin: 0 20px 10px;
-
-        @include onTablet {
-          margin-top: 0;
-          margin-left: 34px;
-          margin-right: 0;
-          margin-bottom: 30px;
-
-          justify-content: start;
-        }
-
-        @include onDesktop {
-          position: absolute;
-          left: 62%;
-          top: 25%;
-        }
-      }
-
-      &-title {
-        font-family: "Montserrat", sans-serif;
-        font-size: 28px;
-        line-height: 28px;
-        font-weight: 400;
-        color: $colorBlack;
-
-        margin: 0 20px 11px;
-
-        @include onTablet {
-          font-size: 36px;
-          line-height: 36px;
-
-          margin: 0 34px 15px;
-        }
-
-        @include onDesktop {
-          position: absolute;
-          left: 62%;
-          top: 38%;
-        }
-      }
-
-      &-text {
-        font-family: "IBM Plex Sans", sans-serif;
-        font-size: 16px;
-        line-height: 24px;
-        font-weight: 300;
-        color: $colorGrey;
-
-        margin: 0 20px 60px;
-
-        @include onTablet {
-          width: 460px;
-
-          margin: 0 34px 112px;
-        }
-
-        @include onDesktop {
-          width: 370px;
-          position: absolute;
-          left: 62%;
-          top: 50%;
-        }
-      }
-    }
-  }
-
-  &__toRomantic {
-    position: relative;
-
-    &--background {
-      width: 100%;
-      height: 210px;
-      background-image: url(../images/photos/fromClassieToRomantic.jpg);
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-
-      margin-bottom: 183px;
-
-      @include onTablet {
-        width: 90%;
-        height: 390px;
-
-        margin: 0 34px 208px;
-      }
-
-      @include onDesktop {
-        width: 100%;
-        height: 550px;
-        margin-right: 0;
-        margin-left: 0;
-        margin-bottom: 302px;
-      }
-    }
-
-    &--card {
-      position: absolute;
-
-      top: 80%;
-      left: 6%;
-      width: 280px;
-      height: 140px;
-      background-color: $colorWhite;
-
-      box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
-
-      @include onTablet {
-        left: 95px;
-
-        width: 570px;
-        height: 204px;
-      }
-
-      @include onDesktop {
-        left: 340px;
-      }
-
-      &-links {
-        display: flex;
-        justify-content: space-between;
-
-        @include onTablet {
-          justify-content: space-around;
-          margin-bottom: 23px;
-        }
-
-        @include onDesktop {
-          margin-top: 45px;
-        }
-      }
-
-      &-text {
-        font-family: "Montserrat", sans-serif;
-        font-size: 28px;
-        line-height: 28px;
-        font-weight: 400;
-        color: $colorBlack;
-        text-align: center;
-
-        @include onTablet {
-          font-size: 36px;
-          line-height: 36px;
-        }
-      }
-    }
-  }
-
-  &__gallery {
-    @include onDesktop {
-      display: none;
-    }
-    &--text {
-      font-family: "Montserrat", sans-serif;
-      font-size: 36px;
-      line-height: 36px;
-      font-weight: 700;
-      color: $colorBlack;
-      text-align: center;
-
-      margin-bottom: 40px;
-
-      @include onTablet {
-        font-size: 48px;
-        line-height: 48px;
-        text-align: left;
-
-        margin: 0 34px 48px;
-      }
-    }
-
-    &--photo {
-      width: 90%;
-      height: 410px;
-      margin: 0 20px 129px;
-      transition: transform 0.8s;
-
-      &:hover {
-        transform: scale(1.2);
-      }
-
-      @include onTablet {
-        height: 543px;
-
-        margin-left: 34px;
-        margin-bottom: 133px;
-
-      }
-    }
-  }
-
-  &__subscription {
-    width: 100%;
-    height: 386px;
-    background-image: url(../images/photos/subscription.jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-
-    padding: 88px 20px;
-    margin-bottom: 50px;
-
-    @include onTablet {
-      height: 380px;
-
-      padding: 82px 154px;
-    }
-
-    @include onDesktop {
-      height: 550px;
-    }
-
-    &--title {
-      font-family: "Montserrat", sans-serif;
-      font-size: 36px;
-      line-height: 36px;
-      font-weight: 700;
-      color: $colorWhite;
-      text-align: center;
-
-      margin-bottom: 20px;
-
-      @include onTablet {
-        font-size: 48px;
-        line-height: 48px;
-
-        margin-bottom: 16px;
-      }
-
-    }
-
-    &--text {
-      font-family: "IBM Plex Sans", sans-serif;
-      font-size: 18px;
-      line-height: 27px;
-      font-weight: 400;
-      color: $colorWhite;
-      text-align: center;
-
-      margin-bottom: 50px;
-
-      @include onTablet {
-        line-height: 18px;
-
-        margin-bottom: 64px;
-      }
-
-      @include onDesktop {
-        margin-bottom: 72px;
-      }
-    }
-
-    &--form {
-      display: flex;
-      width: 100%;
-      padding: 0 20px;
-
-      &-input {
-        width: 70%;
-        height: 50px;
-        padding-left: 20px;
-
-        @include onTablet {
-          height: 70px;
-        }
-
-        @include onDesktop {
-          width: 40%;
-          margin-left: 205px;
-        }
-
-        &::placeholder {
-          font-family: "Montserrat", sans-serif;
-          font-size: 14px;
-          line-height: 14px;
-          font-weight: 400;
-          color: #687480;
-        }
-      }
-
-      &-button {
-        width: 30%;
-        height: 52px;
-        background-color: #f14a27;
-
-        @include onTablet {
-          height: 72px;
-        }
-
-        @include onDesktop {
-          width: 10%;
-        }
-      }
-    }
-  }
-}
-
-.link-one {
-  text-decoration: none;
-
-  font-family: "IBM Plex Sans", sans-serif;
-  font-size: 16px;
-  line-height: 16px;
-  font-weight: 500;
-  color: #687480;
-
-  @include onTablet {
-    font-size: 14px;
-    line-height: 14px;
-
-    padding-top: 3px;
-    margin-right: 20px;
-  }
-}
-
-.date {
-  font-family: "IBM Plex Sans", sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 700;
-  color: $colorGreen;
-
-  @include onTablet {
-    font-size: 14px;
-    line-height: 21px;
   }
 }
