--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,6 +1,9 @@
 .footer {
   position: relative;
+
   @include onDesktop {
+    max-width: 1280px;
+    margin: 0 auto;
     display: flex;
     position: relative;
   }
@@ -182,6 +185,10 @@
       display: block;
       margin-bottom: 20px;
       color: $colorBlack;
+
+      &:hover {
+        color: $colorOrange;
+      }
     }
 
     &--secondLink {
@@ -189,6 +196,10 @@
       display: block;
       margin-bottom: 80px;
       color: $colorBlack;
+
+      &:hover {
+        color: $colorOrange;
+      }
 
       @include onTablet {
         margin-bottom: 120px;
