--- a/src/styles/blocks/normalize.scss
+++ b/src/styles/blocks/normalize.scss
@@ -1,7 +1,8 @@
 * {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
-// html {
-//   width: 100%;
-// }
+body {
+  padding-bottom: 36px;
+}
