--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,5 +4,12 @@
 @import "./blocks/variables.scss";
 
 @import "./blocks/header.scss";
+@import "./blocks/header__burgerMenu.scss";
 @import "./blocks/content.scss";
+@import "./blocks/content__events.scss";
+@import "./blocks/content__toRomantic.scss";
+@import "./blocks/content__gallery.scss";
+@import "./blocks/content__subscription.scss";
+@import "./blocks/link-one.scss";
+@import "./blocks/date.scss";
 @import "./blocks/footer.scss";
