--- a/src/styles/blocks/header__burgerMenu.scss
+++ b/src/styles/blocks/header__burgerMenu.scss
@@ -17,6 +17,14 @@
     display: block;
     width: 70px;
     margin: 50px;
+
+    @include onTablet {
+      margin: 25px;
+    }
+
+    @include onMobile {
+      margin: 15px;
+    }
   }
 
   &-link {
@@ -37,5 +45,19 @@
     font-weight: 700;
     font-size: 72px;
     line-height: 86px;
+
+    @include onTablet {
+      font-size: 36px;
+      line-height: 43px;
+
+      margin: 25px;
+    }
+
+    @include onMobile {
+      font-size: 18px;
+      line-height: 43px;
+
+      margin: 15px;
+    }
   }
 }
