--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,9 +4,12 @@
 
 @import "./mixins.scss";
 
+@import "./bloks/page.scss";
+
 @import "./bloks/header.scss";
 @import "./bloks/logo.scss";
 
+@import "./bloks/events.scss";
 @import "./bloks/sign-up.scss";
 @import "./bloks/footer.scss";
 
