--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -51,13 +51,14 @@
   }
 
   &__bottom-image {
-    width: 320px;
+    width: 1280px;
     height: 210px;
     position: relative;
     background-image: url(/images/bottom.jpg);
     background-size: cover;
     background-position: center;
     margin-bottom: 20px;
+    padding: 0;
 
     @include onTablet() {
       width: 100%;
@@ -67,7 +68,6 @@
       width: 100%;
       height: 550px;
       margin-bottom: 200px;
-
     }
   }
 
@@ -87,8 +87,8 @@
       background-color: white;
       box-shadow: 0 2px rgba(26, 90, 76, 0.25);
       width: 280px;
-      padding: 25px 20px 30px;
-      margin: 100px 20px 0;
+      padding: 25px 20px 15px;
+      margin: 100px 10px 0;
       z-index: 1;
 
       @include onTablet {
@@ -99,7 +99,7 @@
       }
       @include onDesktop() {
         position: absolute;
-        margin: 440px 400px;
+        margin: 440px 300px;
         width: 570px;
         padding: 50px 100px;
       }
