--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -6,7 +6,7 @@
     line-height: 100%;
     text-align: center;
     width: 100%;
-    padding: 88px 10px 20px;
+    padding: 20px;
 
     @include onTablet {
       margin-bottom: 50px;
