--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,84 +1,78 @@
 .header {
-  // max-width: 1280px;
-  display: flex;
-  flex-direction: column-reverse;
-  // margin: 0 0 70px;
-
-  @include onTablet {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    margin: 0 34px 80px;
-  }
-
-  @include onDesktop() {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    height: 655px;
-    margin: 0 0 200px;
-  }
-
-  &__block {
-    padding: 0 20px;
+  &__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    max-width: 1024px;
     width: 100%;
     position: relative;
 
-    @include onTablet() {
-      padding: 45px 37px;
-    }
-    @include onDesktop() {
-      padding: 45px 58px;
-    }
-  }
-
-  &__menu {
-    display: block;
-
     @include onTablet {
-      margin-bottom: 70px;
-    }
-    @include onDesktop() {
-      margin-bottom: 149px;
+      display: flex;
+
     }
 
-    &--menu-opener {
-      height: 20px;
-      width: 20px;
+    @include onDesktop() {
+      display: grid;
+      grid-template-columns: repeat(12, 1fr);
+      column-gap: 30px;
     }
   }
 
-  &__title {
-
-    @extend %Montserrat;
-    font-weight: 700;
-    font-size: 45px;
+  &__img-box {
+    background-image: url(/images/NAMU_header.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     margin-bottom: 20px;
+    height: 300px;
 
     @include onTablet {
-      margin-bottom: 38px;
+      width: 50%;
+      height: 384px;
     }
-    @include onDesktop() {
-      margin-bottom: 89px;
+    @include onDesktop {
+      grid-column: 6 / -1;
+      width: 100%;
+      height: 655px;
+    }
+  }
+
+  &__nav {
+    display: flex ;
+    align-items: center;
+    padding: 10px 24px 0;
+
+    @include onTablet {
+      padding-top: 50px;
     }
   }
 
   &__tickets {
+    position: relative;
+    bottom: 500px;
     display: flex;
-    flex-wrap: wrap;
     width: 280px;
     height: 50px;
+    align-items: center;
+    justify-content: center;
     border: 1px solid #1a5a4c;
 
+    margin: 0 auto;
+
     @include onTablet() {
-      width: 270px;
-      height: 70px;
+      margin-left: 34px;
+      width: max-content;
     }
     @include onDesktop() {
       width: 270px;
       height: 70px;
-      margin-left: 40%;
+      align-self: flex-start;
+      margin-top: 90px;
+      margin-left: 140px;
     }
 
-    &-text {
+    &-button {
       display: flex;
       justify-content: center;
       align-items: center;
@@ -86,9 +80,12 @@
       line-height: 100%;
       width: 85%;
 
-      @extend %IBM;
-      font-weight: 500;
-      font-size: 16px;
+      &-text {
+        @extend %IBM;
+        font-weight: 500;
+        font-size: 16px;
+
+      }
 
       @include onTablet() {
         width: 75%;
@@ -98,34 +95,35 @@
       }
     }
 
-    &-go {
+    &-link {
+      display: block;
+
       border: 1px solid #1a5a4c;
       width: 15%;
       height: 100%;
-      // border-left: none;
       background-color: #1a5a4c;
 
       @include onTablet() {
         width: 25%;
       }
-    }
 
-    &-img {
-      width: 100%;
-      height: 100%;
+      &-img {
+        width: 100%;
+        height: 100%;
 
-      &:hover {
-        animation-name: spin;
-        animation-duration: 5000ms;
-        animation-iteration-count: infinite;
-        animation-timing-function: linear;
+        &:hover {
+          animation-name: spin;
+          animation-duration: 5000ms;
+          animation-iteration-count: infinite;
+          animation-timing-function: linear;
 
-        @keyframes spin {
-          from {
-            transform: rotate(0deg);
-          }
-          to {
-            transform: rotate(360deg);
+          @keyframes spin {
+            from {
+              transform: rotate(0deg);
+            }
+            to {
+              transform: rotate(360deg);
+            }
           }
         }
       }
@@ -135,8 +133,8 @@
   &__events {
     display: none;
     @include onDesktop() {
-      display: block;
-
+      display: flex;
+      margin-top: 400px;
       transform-origin: 0 0;
       transform: rotate(-90deg);
       font-family: "IBM Plex Sans", sans-serif;
@@ -144,18 +142,15 @@
       font-weight: 700;
       font-size: 14px;
       line-height: 100%;
-      position: relative;
-
-      left: 17px;
-      bottom: -24px;
+      position: absolute;
 
       &::before {
         content: "";
         display: block;
         position: absolute;
 
-        right: 320px;
-        bottom: -28px;
+        right: 130px;
+        top: -27px;
         width: 1px;
         height: 70px;
         background: #1a5a4c;
@@ -174,19 +169,6 @@
     padding: 14px 40px;
     margin-bottom: 20px;
 
-    &-logo {
-      text-decoration: none;
-      font-family: "Montserrat", sans-serif;
-      font-style: normal;
-      font-weight: 700;
-      font-size: 36px;
-      line-height: 100%;
-      text-align: center;
-      color: black;
-      height: 100%;
-      width: 100%;
-    }
-
     @include onTablet {
       height: 384px;
       grid-column: 4 / 3;
@@ -198,6 +180,67 @@
       height: 655px;
       grid-column: 5 / 13;
       background-size: cover;
+    }
+  }
+
+  &__menu {
+    display: block;
+    margin: 40px;
+
+    &-icon {
+      height: 12px;
+      width: 18px;
+
+      @include onTablet {
+        position: absolute;
+        top: 50px;
+        left: 34px;
+      }
+      @include onDesktop {
+        position: absolute;
+        top: 50px;
+        left: 55px;
+      }
+    }
+
+    &-logo {
+      margin-left: 40px;
+    }
+  }
+
+  &__text-block {
+    @include onTablet {
+      display: flex;
+      flex-direction: column;
+      width: 50%;
+    }
+
+    @include onDesktop {
+      grid-column: 1 / 6;
+    }
+  }
+
+  &__title {
+    @extend %Montserrat;
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 100%;
+    text-align: center;
+
+    @include onTablet {
+      font-weight: 700;
+      font-size: 54px;
+      line-height: 120%;
+      margin-bottom: 38px;
+    }
+    @include onDesktop() {
+      position: relative;
+      bottom: 600px;
+      font-weight: 700;
+      font-size: 72px;
+      line-height: 120%;
+      margin-bottom: 10px;
+      margin-left: 55px;
     }
   }
 }
