--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@
 
 @import "/styles/blocks/page.scss";
 @import "/styles/blocks/header.scss";
+@import "/styles/blocks/menu.scss";
 @import "/styles/blocks/event.scss";
 @import "/styles/blocks/events.scss";
 @import "/styles/blocks/swiper.scss";
@@ -15,5 +16,13 @@
 @import "/styles/blocks/info.scss";
 
 .container {
-  margin: 0 20px;
+  max-width: 1170px;
+  margin: 0 auto;
+  // padding: 0 20px;
+
+  @include onDesktop {
+    max-width: 1170px;
+    margin: 0 auto;
+    // padding: 0 10px;
+  }
 }
