--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -4,10 +4,12 @@
   z-index: 2;
 
   height: 100vh;
+  opacity: 0.9;
 
   &__icons {
-    margin: 45px;
+    margin: 25px;
     @include onDesktop {
+      margin: 45px;
       left: 30px;
     }
   }
