--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -1,5 +1,6 @@
 .subscription {
-  width: 1280px;
+  max-width: 1280px;
+  width: 100%;
   height: 386px;
   position: relative;
   background-image: url(/images/sub.jpg);
@@ -8,11 +9,11 @@
   margin-bottom: 50px;
 
   @include onTablet() {
-    width: 1280px;
+    width: 100%;
     height: 390px;
   }
   @include onDesktop() {
-    width: 1280px;
+    width: 150%;
     height: 550px;
   }
 
