the gallery looks better - added the menu - still struggling with adaptation

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -17,7 +17,9 @@
     align-items: center;
     height: 90px;
     position: relative;
+
     &-opener {
+      position: absolute;
       height: 12px;
       width: 18px;
     }
@@ -46,31 +48,31 @@
 
   &__button {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: row;
+    box-sizing: border-box;
     height: 50px;
     justify-content: center;
     padding-bottom: 70px;
     padding-top: 89px;
 
-    &-item {
+    &--item {
       width: 230px;
       height: 50px;
       border: 1px solid #1a5a4c;
       text-align: center;
       box-sizing: border-box;
       text-transform: uppercase;
+      padding: 10px;
     }
-
-    &-search {
+    &--search {
       width: 50px;
       height: 50px;
       background-image: url(../images/rectangle.png);
       color: #fff;
-      padding: 0;
       margin: 0;
       border: 1px solid transparent;
       text-decoration: none;
-      text-align: center;
+      padding: 15px;
       box-sizing: border-box;
     }
   }
