--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,14 +1,43 @@
 .footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 48px 54px;
+
+  &__link-container {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+  }
+
+  &__link {
+    text-decoration: none;
+    color: #0f0e08;
+    padding: 20px;
+
+    @include onDeskTop {
+      padding-bottom: 20px;
+      padding-right: 132px;
+    }
+  }
   &__logo {
-    margin-bottom: 40px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
 
-    &-links {
+    &-pic {
+      margin-bottom: 62px;
+    }
+
+    &--links {
+      flex-direction: row;
       height: 24px;
+      margin-top: 62px;
     }
+  }
 
-    &-link {
-      margin-right: 20px;
-    }
+  &__logo-link {
+    margin-right: 15px;
+    text-decoration: none;
   }
 
   &__schedule {
@@ -43,10 +72,13 @@
     }
   }
 
-  &__link {
+  &__nav {
     display: inline-block;
-    text-decoration: none;
-    color: #0f0e08;
+
+    &-link {
+      text-decoration: none;
+      color: #0f0e08;
+    }
   }
 
   &__line {
