--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,4 +1,4 @@
-.swiper {
+/*.swiper {
   &-slide {
     margin: 20px;
     width: 100vw;
@@ -6,5 +6,62 @@
 
   &-picture {
     max-width: 100vw;
+  }
+
+  @include onDeskTop {
+    display: none;
+  }
+
+  @include onMobile {
+    display: block;
+  }
+}*/
+
+.gallery {
+  margin-top: 200px;
+
+  /*@include onDeskTop {
+    display: block;
+  }
+
+  @include onMobile {
+    display: none;
+  }*/
+
+  &__photo-container {
+    position: relative;
+    width: 100%;
+    padding-bottom: 100%;
+    max-height: 600px;
+    margin: 0 auto;
+
+    @include onDeskTop {
+      height: 600px;
+      padding-bottom: 0;
+    }
+
+    &::after {
+      content: "";
+      display: block;
+      padding-bottom: 100%;
+    }
+  }
+
+  &__photo {
+    position: absolute;
+    width: 100%;
+    height: 410px;
+    margin-left: 30px;
+    margin-right: 30px;
+
+    object-fit: cover;
+    object-position: top;
+  }
+
+  &__title {
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 48px;
+    margin-left: 55px;
   }
 }
