--- a/src/styles/blocks/sections.scss
+++ b/src/styles/blocks/sections.scss
@@ -9,11 +9,19 @@
     padding-bottom: 40px;
   }
 
+  &-container {
+    display: flex;
+    justify-content: center;
+    width: 280px;
+    height: 210px;
+  }
+
   &-painting {
     width: 100%;
     margin: 0 auto;
 
     @include onDeskTop {
+      height: 600px;
       margin-bottom: 104px;
       margin-left: 55px;
     }
@@ -26,6 +34,7 @@
     line-height: 16px;
     color: #687480;
     text-align: left;
+    margin-bottom: 32px;
   }
 
   &-date {
@@ -36,6 +45,7 @@
     line-height: 16px;
     color: #1a5a4c;
     text-align: right;
+    margin-bottom: 32px;
   }
 
   &-name {
@@ -79,11 +89,4 @@
     background-color: #fff;
     margin-bottom: 200px;
   }
-}
-
-.container {
-  max-width: 1340px;
-  padding: 0 30px;
-  margin: 0 auto;
-  width: 100%;
 }
