--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,6 +20,7 @@ body {
 
 @import "./blocks/page.scss";
 @import "./blocks/grid.scss";
+@import "./blocks/container.scss";
 @import "utils";
 @import "typography";
 @import "./blocks/header.scss";
@@ -27,3 +28,4 @@ body {
 @import "./blocks/footer.scss";
 @import "./blocks/subscribe.scss";
 @import "./blocks/gallery.scss";
+@import "./blocks/menu.scss";
