added hovers, fixed spaces, fixed form + added js

--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -2,6 +2,11 @@
   text-align: center;
   padding-top: 50px;
 
+  @include fixHeader {
+    margin-top: 500px;
+  }
+
+
   &__title {
     font-family: "Montserrat", sans-serif;
     font-weight: 700;
