--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -6,6 +6,10 @@
   background-repeat: no-repeat;
   align-items: center;
 
+  @include fixHeader {
+    margin-bottom: 50px;
+  }
+
   &__menu {
     position: relative;
     left: 5%;
