--- a/src/styles/info.scss
+++ b/src/styles/info.scss
@@ -42,6 +42,16 @@
       display: flex;
       gap: 24px;
 
+      &-link {
+        width: 24px;
+        height: 24px;
+        transition: background-color 0.5s;
+        border-radius: 4px;
+        &:hover {
+          background-color: rgba(70, 90, 76, 0.5);
+        }
+      }
+
       &-image {
         width: 24px;
         height: 24px;
@@ -139,6 +149,9 @@
       line-height: 100%;
       color: $title-black;
 
+      &:hover {
+        text-decoration: none;
+      }
     }
   }
 
