--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -29,6 +29,12 @@
     font-weight: 400;
     font-size: 36px;
     color: $title-black;
+    transition: text-decoration, color 0.3s;
+
+    &:hover {
+      text-decoration: dashed;
+      color: $sub-gray;
+    }
   }
 
   &__call {
@@ -37,9 +43,23 @@
     text-decoration: none;
     margin: 30px;
     color: $title-black;
+    transition: color 0.3s;
+
+    &:hover {
+      text-decoration: dashed;
+      color: $sub-gray;
+    }
   }
 
   &__top-actions {
     padding: 48px;
+  }
+
+  &__cross-icon {
+    transition: background-color 0.3s;
+    border-radius: 5px;
+    &:hover {
+      background-color: #1a8a6c;
+    }
   }
 }
