--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -1,6 +1,6 @@
 .button {
-  width: 50px;
-  height: 50px;
+  width: 70px;
+  height: 70px;
   background-color: $museum-green;
   background-image: url(../images/arrow.png);
   background-repeat: no-repeat;
@@ -18,6 +18,13 @@
   }
 
   &--red {
+    position: absolute;
+    right: 0;
     background-image: url(../images/arrow-black.png);
+    transition: background-color 0.3s;
+
+    &:hover {
+      background-color: rgba(255, 0, 0, 0.5);
+    }
   }
 }
