--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -1,4 +1,5 @@
 .page {
+
   scroll-behavior: smooth;
   &__subscription {
     margin-top: 100px;
@@ -18,5 +19,10 @@
     &:target {
       transform: translateX(0);
     }
+  }
+
+  &__content {
+    max-width: 1440px;
+    margin: 0 auto;
   }
 }
