--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -1,12 +1,17 @@
 .container {
   margin: 0 auto;
-  /* max-width: 280px; */
   padding: 0 20px;
   @include onTablet {
     padding: 0 34px;
   }
   @include onDesktop {
     padding: 0 55px;
+    max-width: 1170px;
+  }
+  &-wide {
+    @include onDesktop {
+      max-width: 1280px;
+    }
   }
 }
 
