--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,11 +1,13 @@
 .menu {
   background-color: #d7dde3;
 
-  height: 100vh;
-  padding: 18px 0;
-  z-index: 1;
-  overflow-y: auto;
+  &__content {
+    height: 100vh;
+    padding: 18px 0;
+    z-index: 1;
+    overflow-y: auto;
 
+  }
   &__top {
     margin-bottom: 80px;
 
