--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -2,6 +2,7 @@
   &__container {
     width: 100%;
     height: 320px;
+    max-width: 1280px;
     background-image: url(../images/photo/subscribe_img.png);
     background-repeat: no-repeat;
     background-size: cover;
