--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,15 +1,19 @@
 .header {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(4, 1fr);
-  gap: 20px 20px;
-  position: relative;
+  max-width: 1280px;
+  margin: 0 auto;
+  &__container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    gap: 20px 20px;
+    position: relative;
 
-  @include onTablet {
-    grid-template-columns: repeat(6, 1fr);
-  }
-  @include onDesktop {
-    grid-template-columns: repeat(12, 1fr);
+    @include onTablet {
+      grid-template-columns: repeat(6, 1fr);
+    }
+    @include onDesktop {
+      grid-template-columns: repeat(12, 1fr);
+    }
   }
   &__content {
     grid-column: 1 / 3;
@@ -69,6 +73,7 @@
     position: absolute;
     top: 33px;
     left: 23px;
+
     @include onTablet {
       top: 45px;
       left: 37px;
