--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -51,14 +51,12 @@
   }
 
   &__bottom-image {
-
+    width: 100%;
     height: 210px;
     position: relative;
     background-image: url(/images/bottom.jpg);
     background-size: cover;
     background-position: center;
-    margin-bottom: 20px;
-    padding: 0;
 
     @include onTablet() {
       width: 100%;
@@ -88,12 +86,14 @@
       box-shadow: 0 2px rgba(26, 90, 76, 0.25);
       width: 280px;
       padding: 25px 20px 15px;
-      margin: 100px 10px 0;
+      margin: 100px 20px 0;
       z-index: 1;
 
       @include onTablet {
         position: absolute;
-        margin: 20px 20px 40px 50px;
+
+        margin-top: 180px;
+        margin-left: 160px;
         width: 570px;
         padding: 50px 100px;
       }
@@ -101,7 +101,7 @@
         position: absolute;
         margin: 440px 300px;
         width: 570px;
-        padding: 50px 100px;
+        // padding: 50px 100px;
       }
     }
   }
