--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -21,15 +21,16 @@
   }
 
   &__item {
-    margin-bottom: 60px;
 
-    @include onTablet {
-      margin-bottom: 50px;
-    }
+    // margin-bottom: 60px;
 
-    @include onDesktop {
-      margin-bottom: 100px;
-    }
+    // @include onTablet {
+    //   margin-bottom: 50px;
+    // }
+
+    // @include onDesktop {
+    //   margin-bottom: 100px;
+    // }
 
     &--bottom {
       margin-bottom: 100px;
