--- a/src/styles/blocks/info.scss
+++ b/src/styles/blocks/info.scss
@@ -10,8 +10,7 @@
   color: #0f0e08;
 
   @include onTablet() {
-    padding: 51px 0 46px;
-    justify-content: start;
+    padding: 0 0 46px;
   }
   @include onDesktop() {
     padding: 0;
@@ -20,10 +19,6 @@
   &:first-of-type {
     border-bottom: 1px solid #1a5a4c80;
 
-    @include onTablet() {
-      padding-top: 0;
-
-    }
     @include onDesktop() {
       border-bottom: none;
       border-right: 1px solid #1a5a4c80;
@@ -90,6 +85,12 @@
     line-height: 150%;
     color: black;
     text-decoration: none;
+
+    transition: transform 0.3s border-color 0.5s;
+
+    &:hover {
+      color: rgb(100, 95, 95);
+    }
   }
 
   &__item {
