--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -1,6 +1,10 @@
 .subscription {
-  max-width: 1280px;
-  width: 100%;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: center;
+  // box-sizing: border-box;
+
+  // max-width: 1280px;
   height: 386px;
   position: relative;
   background-image: url(/images/sub.jpg);
@@ -13,7 +17,7 @@
     height: 390px;
   }
   @include onDesktop() {
-    width: 150%;
+    width: 100%;
     height: 550px;
   }
 
