--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,7 +10,6 @@
 @import "/styles/blocks/swiper.scss";
 @import "/styles/blocks/gallery.scss";
 @import "/styles/blocks/subscription.scss";
-@import "/styles/blocks/sub.scss";
 @import "/styles/blocks/footer.scss";
 @import "/styles/blocks/media.scss";
 @import "/styles/blocks/info.scss";
@@ -21,7 +20,7 @@
   // padding: 0 20px;
 
   @include onDesktop {
-    max-width: 1170px;
+    // max-width: 1170px;
     margin: 0 auto;
     // padding: 0 10px;
   }
