--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -7,7 +7,8 @@
 
   &__wrapper {
     @include onTablet() {
-      width: 460px;
+      display: flex;
+      width: auto;
     }
     @include onDesktop() {
       display: flex;
@@ -18,6 +19,7 @@
   &__information {
     @include onTablet() {
       display: flex;
+      justify-content: space-between;
       margin-bottom: 54px;
     }
     @include onDesktop() {
@@ -79,8 +81,8 @@
     flex-wrap: wrap;
     gap: 10px;
     .copyright__name {
-      font-family: "IBM Plex Sans", sans-serif;
-      font-style: normal;
+
+      @extend %IBM;
       font-weight: 300;
       font-size: 12px;
       line-height: 140.62%;
