--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -157,7 +157,7 @@
       color: $colorBlack;
 
       &:hover {
-        background-color: $colorOrange;
+        background-color: $colorGreen;
       }
 
       @include onTablet {
@@ -171,7 +171,7 @@
       position: absolute;
       display: inline-block;
       width: 15%;
-      height: 50px;
+      height: 48px;
       cursor: pointer;
       background-color: $colorGreen;
 
@@ -181,7 +181,25 @@
 
       @include onTablet {
         width: 67px;
-        height: 67px;
+        height: 68px;
+      }
+
+      &-image {
+        position: absolute;
+        top: 20px;
+        left: 20px;
+        width: 25px;
+        height: 25px;
+
+        @include onMobile {
+          top: 10px;
+          left: 10px;
+        }
+
+        @include onTablet {
+          top: 20px;
+          left: 20px;
+        }
       }
     }
   }
