--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 @import "./blocks/mixines.scss";
 @import "./blocks/variables.scss";
 
+@import "./blocks/page.scss";
 @import "./blocks/header.scss";
 @import "./blocks/header__burgerMenu.scss";
 @import "./blocks/content.scss";
