--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,24 @@
 @import "utils";
-@import "fonts";
-@import "typography";
 
-body {
-  background: $c-gray;
+@import "blocks/page.scss";
+@import "blocks/container.scss";
+@import "blocks/grid.scss";
+@import "blocks/logo.scss";
+@import "blocks/header.scss";
+@import "blocks/museum.scss";
+@import "blocks/menu.scss";
+@import "blocks/button.scss";
+@import "blocks/marker.scss";
+@import "blocks/events.scss";
+@import "blocks/exhibition.scss";
+@import "blocks/lecture.scss";
+@import "blocks/picslider.scss";
+@import "blocks/painting.scss";
+@import "blocks/subscription.scss";
+@import "blocks/form-field.scss";
+@import "blocks/contacts.scss";
+@import "blocks/footer.scss";
+
+* {
+  box-sizing: border-box;
 }
