--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,10 +1,10 @@
-/*.swiper {
+/*.swidiver {
   &-slide {
     margin: 20px;
     width: 100vw;
   }
 
-  &-picture {
+  &-divicture {
     max-width: 100vw;
   }
 
@@ -19,6 +19,7 @@
 
 .gallery {
   margin-top: 200px;
+  padding-top: 200px;
 
   /*@include onDeskTop {
     display: block;
@@ -28,7 +29,7 @@
     display: none;
   }*/
 
-  &__photo-container {
+  /*&__photo-container {
     position: relative;
     width: 100%;
     padding-bottom: 100%;
@@ -45,9 +46,9 @@
       display: block;
       padding-bottom: 100%;
     }
-  }
+  } 06.08 */
 
-  &__photo {
+  /*&__photo {
     position: absolute;
     width: 100%;
     height: 410px;
@@ -56,6 +57,47 @@
 
     object-fit: cover;
     object-position: top;
+
+    @include onDeskTop {
+      height: 600px;
+      padding-bottom: 30px;
+    }
+  }*/
+
+  &__photo-container {
+    position: relative;
+    width: 100%;
+    padding-bottom: 100%;
+    margin-right: 55px;
+    max-height: 600px;
+    /*margin: 0 auto;*/
+
+    @include onDeskTop {
+      height: 600px;
+      padding-bottom: 0;
+    }
+
+    /*&::after {
+      content: "";
+      display: block;
+      padding-bottom: 100%;
+    }*/
+  }
+
+  &__photo {
+    position: absolute;
+    width: 100%;
+    padding-bottom: 30px;
+    height: 410px;
+    margin-left: 30px;
+    margin-right: 30px;
+
+    object-fit: cover;
+    object-position: top;
+
+    @include onDeskTop {
+      height: 600px;
+    }
   }
 
   &__title {
