--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -3,10 +3,9 @@
   top: 0;
   left: 0;
   right: 0;
+  background-color: #1a5a4c;
   width: 100vw;
   height: 100vh;
-
-  background-color: #e5e5e5;
 
   transform: translateX(-100%);
 
@@ -14,75 +13,45 @@
     transform: translateX(0);
   }
 
+  &__content {
+    display: flex;
+    justify-content: space-between;
+    box-sizing: border-box;
+  }
+
+  &__logo {
+    padding: 50px;
+  }
+
   &__close {
-    position: absolute;
-    margin-top: 43px;
-    margin-left: 35px;
+    padding: 50px;
+    font-weight: 700;
+    text-decoration: none;
+    color: #0f0e08;
 
-    &-button {
-      color: #0f0e08;
-      height: 50px;
-      width: 50px;
-      font-weight: 700;
-      text-decoration: none;
+    &:hover {
+      color: #f14a27;
     }
   }
 
-  &__button {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 88px;
-    margin-top: 50px;
-
-    &-text {
-      display: inline-block;
-      width: 230px;
-      height: 50px;
-      border: 1px solid #f14a27;
-      text-align: center;
-      box-sizing: border-box;
-      font-weight: 400;
-      font-size: 14px;
-      line-height: 14px;
-      color: #687480;
-    }
-
-    &-search {
-      box-sizing: border-box;
-      display: inline-block;
-      width: 50px;
-      height: 50px;
-      background-image: url(../images/search_orange.png);
-      color: #000;
-      border: 1px solid transparent;
-      text-decoration: none;
-      text-align: center;
-      padding: 13px;
-    }
+  &__list {
+    display: inline-block;
+    list-style: none;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 48px;
   }
 
-  &__header {
-    display: flex;
-    align-items: center;
-    height: 90px;
-    position: relative;
-
-    &-logo {
-      height: 50px;
-      width: 50px;
-    }
-
-    &-close {
-      position: absolute;
-      right: 0;
-      margin: auto;
-      width: 55px;
-    }
+  &__item {
+    margin-bottom: 32px;
   }
 
-  &__footer {
-    background-color: #fff;
+  &__item-a {
+    text-decoration: none;
+    color: #0f0e08;
+
+    &:hover {
+      color: #f14a27;
+    }
   }
 }
