--- a/src/styles/blocks/sections.scss
+++ b/src/styles/blocks/sections.scss
@@ -1,5 +1,10 @@
 .page__section {
   box-sizing: border-box;
+
+  &--container {
+    max-width: 370px;
+    margin-right: 55px;
+  }
   &-title {
     text-align: center;
     font-weight: 700;
@@ -17,7 +22,7 @@
   }
 
   &-painting {
-    width: 100%;
+    /*width: 100%;*/
     margin: 0 auto;
 
     @include onDeskTop {
@@ -79,12 +84,10 @@
     align-items: center;
     justify-content: space-between;
     padding: 100px;
-    margin: auto;
     margin-top: 448px;
-    /*background-image: url(../images/white-background.png);
-    background-repeat: no-repeat;
-    background-size: cover;*/
     max-width: 100%;
+
+    
 
     background-color: #fff;
     margin-bottom: 200px;
