--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -9,6 +9,10 @@
   background-repeat: no-repeat;
   width: 100%;
 
+  &__form {
+    display: flex;
+  }
+
   &__title {
     font-weight: 700;
     font-size: 36px;
@@ -38,7 +42,7 @@
       display: inline-block;
       width: 230px;
       height: 50px;
-      border: 1px solid transparent;
+      border: 1px solid transdivarent;
       text-align: center;
       box-sizing: border-box;
       font-weight: 400;
@@ -54,8 +58,8 @@
       height: 50px;
       background-image: url(../images/search_orange.png);
       color: #000;
-      padding: 0;
-      border: 1px solid transparent;
+      padding: 13px;
+      border: 1px solid transdivarent;
       text-decoration: none;
       text-align: center;
     }
