--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -93,7 +93,7 @@
         position: absolute;
 
         margin-top: 180px;
-        margin-left: 160px;
+        margin-left: 90px;
         width: 570px;
         padding: 50px 100px;
       }
@@ -101,7 +101,6 @@
         position: absolute;
         margin: 440px 300px;
         width: 570px;
-        // padding: 50px 100px;
       }
     }
   }
@@ -167,6 +166,7 @@
     line-height: 100%;
     position: relative;
     transition: color $duration;
+    text-decoration: none;
 
     &:hover {
       color: rgb(179, 126, 189);
