--- a/src/styles/blocks/info.scss
+++ b/src/styles/blocks/info.scss
@@ -86,10 +86,13 @@
     color: black;
     text-decoration: none;
 
-    transition: transform 0.3s border-color 0.5s;
+    border-bottom: 1px solid transparent;
+
+    transition: border-color 0.3s;
 
     &:hover {
       color: rgb(100, 95, 95);
+      border-color: black;
     }
   }
 
