--- a/src/styles/blocks/swiper.scss
+++ b/src/styles/blocks/swiper.scss
@@ -1,7 +1,7 @@
 .swiper {
   text-align: center;
   @include onTablet() {
-    display: none;
+    text-align: center;
   }
   @include onDesktop() {
     display: none;
@@ -16,7 +16,7 @@
     width: 280px;
     height: 410px;
     position: cover;
-    margin-bottom: 129px;
 
+    margin-bottom: 129px;
   }
 }
