--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -8,9 +8,11 @@
   }
 
   @include onDesktop() {
-    display: block;
+    display: flex;
+    box-sizing: border-box;
+
     width: 100%;
-    margin: 0 55px 200px;
+    margin: 10px 20px 55px;
   }
 
   &__title {
@@ -23,7 +25,7 @@
     margin-bottom: 40px;
 
     @include onTablet() {
-      text-align: left;
+      text-align: center;
       margin: 0 20px 40px;
     }
     @include onDesktop() {
@@ -34,16 +36,25 @@
 
   &__first {
     display: flex;
-    gap: 50px;
+    box-sizing: border-box;
+    width: 100%;
+
+    gap: 20px;
     margin: 0 0 30px;
   }
 
   &__second {
     display: flex;
+    box-sizing: border-box;
+    width: 100%;
+
     gap: 50px;
+    margin: 0 0 40px;
   }
 
   &__image {
+
+    width: 100%;
     transition: transform 0.3s;
 
     &:hover {
