--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -46,41 +46,36 @@
   }
 
   &__tickets {
-    position: relative;
+    position: absolute;
     bottom: 500px;
     display: flex;
     width: 280px;
     height: 50px;
-    align-items: center;
-    justify-content: center;
     border: 1px solid #1a5a4c;
 
     margin: 0 auto;
 
-    @include onTablet() {
-      position: absolute;
+    margin-top: 20px;
 
-      right: 60%;
-      top: 30%;
+    @include onTablet() {
+      display: flex;
+
+      position: absolute;
+      top: 290px;
+      left: 50px;
 
       width: 270px;
       height: 70px;
-      margin-top: 190px;
-      margin-left: 0;
-      margin-right: 50px;
     }
     @include onDesktop() {
-      position: absolute;
+      display: flex;
 
-      right: 60%;
-      top: 30%;
+      position: absolute;
+      top: 500px;
+      left: 200px;
 
       width: 270px;
       height: 70px;
-      margin-top: 260px;
-      margin-left: 0;
-      margin-right: 50px;
-
     }
 
     &-button {
@@ -121,22 +116,6 @@
       &-img {
         width: 100%;
         height: 100%;
-
-        &:hover {
-          animation-name: spin;
-          animation-duration: 5000ms;
-          animation-iteration-count: infinite;
-          animation-timing-function: linear;
-
-          @keyframes spin {
-            from {
-              transform: rotate(0deg);
-            }
-            to {
-              transform: rotate(360deg);
-            }
-          }
-        }
       }
     }
   }
@@ -216,16 +195,13 @@
     }
 
     &-logo {
-      margin-left: 40px;
+      margin: 0 auto;
     }
   }
 
   &__text-block {
-    @include onTablet {
-      // grid-column: 2 / -1;
-    }
-
     @include onDesktop {
+
       grid-column: 1 / 6;
     }
   }
@@ -239,6 +215,7 @@
 
     @include onTablet {
       position: relative;
+      text-align: left;
 
       font-weight: 700;
       font-size: 54px;
@@ -246,9 +223,11 @@
       margin-left: 30px;
       bottom: 280px;
     }
-    
+
     @include onDesktop() {
       position: relative;
+      text-align: left;
+
       bottom: 550px;
       font-weight: 700;
       font-size: 72px;
