--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -1,10 +1,4 @@
 .subscription {
-  // display: flex;
-  // flex-direction: column;
-  // justify-content: center;
-  // box-sizing: border-box;
-
-  // max-width: 1280px;
   height: 386px;
   position: relative;
   background-image: url(/images/sub.jpg);
@@ -91,6 +85,22 @@
     @include onDesktop() {
       width: 70px;
       height: 70px;
+    }
+  }
+  &_att {
+    display: flex;
+    background-color: rgb(0, 0, 0);
+    &-warning {
+      &:hover {
+        @extend %IBM;
+        font-size: 18px;
+        margin-top: 80px;
+        border-radius: 2px;
+        padding: 10px;
+        position: absolute;
+        background-color: #fff;
+        color: #3b3c40;
+      }
     }
   }
 }
